# Hackathon

./: .gitignore
.specify/memory/: constitution.md
docusaurus_site/: docusaurus.config.js  package-lock.json
docusaurus_site/docs/module1/: 01-ros2-communication.md  02-python-control-rclpy.md  03-urdf-humanoid-robot.md
docusaurus_site/static/examples/ros2_basics_examples/: package.xml  setup.cfg  setup.py
docusaurus_site/static/examples/ros2_basics_examples/models/: simple_humanoid.urdf
docusaurus_site/static/examples/ros2_basics_examples/ros2_basics_examples/: simple_publisher.py  simple_service_client.py  simple_service_server.py  simple_subscriber.py
history/prompts/001-module1-ros2-basics/: 001-specify-module-1-ros-2-basics.spec.prompt.md  002-plan-module-1-ros-2-basics.plan.prompt.md  003-tasks-for-module-1-ros-2-basics.tasks.prompt.md  004-implement-module-1-ros-2-basics.green.prompt.md
specs/001-module1-ros2-basics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-module1-ros2-basics/checklists/: requirements.md
