<?xml version="1.0"?>
<package format="3">
  <name>ros2_basics_examples</name>
  <version>0.0.0</version>
  <description>Examples for the ROS 2 Basics tutorial</description>
  <maintainer email="student@example.com">student</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclpy</depend>
  <depend>example_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
